--- a/rancid/bin/Makefile.in
+++ b/rancid/bin/Makefile.in
@@ -97,14 +97,14 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 DIST_COMMON = $(srcdir)/Makefile.am $(am__DIST_COMMON)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/include/config.h
-CONFIG_CLEAN_FILES = control_rancid agmrancid alogin arancid anlogin \
-	arrancid avologin avorancid blogin brancid cat5rancid clogin \
-	complogin cssrancid dllogin elogin erancid f5rancid f10rancid \
-	flogin fnlogin fnrancid hlogin hrancid htlogin htrancid jlogin \
-	jerancid mrancid mrvlogin mtrancid mtlogin nlogin nrancid \
-	nslogin nsrancid panlogin prancid rblogin rivlogin rivrancid \
-	rrancid rtftpcopy srancid tlogin trancid xilogin xirancid \
-	xrancid wlogin zrancid
+CONFIG_CLEAN_FILES = login_top control_rancid a10login agmrancid \
+	alogin arancid anlogin arrancid avologin avorancid blogin \
+	brancid cat5rancid clogin complogin cssrancid dllogin elogin \
+	erancid f5rancid f10rancid flogin fnlogin fnrancid hlogin \
+	hrancid htlogin htrancid jlogin jerancid mrancid mrvlogin \
+	mtrancid mtlogin nlogin nrancid nslogin nsrancid panlogin \
+	prancid rblogin rivlogin rivrancid rrancid rtftpcopy srancid \
+	tlogin trancid xilogin xirancid xrancid wlogin zrancid
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
@@ -196,8 +196,9 @@ am__define_uniq_tagged_files = \
   done | $(am__uniquify_input)`
 ETAGS = etags
 CTAGS = ctags
-am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/agmrancid.in \
-	$(srcdir)/alogin.in $(srcdir)/anlogin.in $(srcdir)/arancid.in \
+am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/a10login.in \
+	$(srcdir)/agmrancid.in $(srcdir)/alogin.in \
+	$(srcdir)/anlogin.in $(srcdir)/arancid.in \
 	$(srcdir)/arrancid.in $(srcdir)/avologin.in \
 	$(srcdir)/avorancid.in $(srcdir)/blogin.in \
 	$(srcdir)/brancid.in $(srcdir)/cat5rancid.in \
@@ -208,7 +209,8 @@ am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/agmrancid.in \
 	$(srcdir)/flogin.in $(srcdir)/fnlogin.in $(srcdir)/fnrancid.in \
 	$(srcdir)/hlogin.in $(srcdir)/hrancid.in $(srcdir)/htlogin.in \
 	$(srcdir)/htrancid.in $(srcdir)/jerancid.in \
-	$(srcdir)/jlogin.in $(srcdir)/mrancid.in $(srcdir)/mrvlogin.in \
+	$(srcdir)/jlogin.in $(srcdir)/login_top.in \
+	$(srcdir)/mrancid.in $(srcdir)/mrvlogin.in \
 	$(srcdir)/mtlogin.in $(srcdir)/mtrancid.in $(srcdir)/nlogin.in \
 	$(srcdir)/nrancid.in $(srcdir)/nslogin.in \
 	$(srcdir)/nsrancid.in $(srcdir)/panlogin.in \
@@ -348,7 +350,7 @@ top_srcdir = @top_srcdir@
 
 #AUTOMAKE_OPTIONS=foreign no-dependencies
 AUTOMAKE_OPTIONS = foreign
-bin_SCRIPTS = agmrancid alogin anlogin arancid arrancid avologin \
+bin_SCRIPTS = a10login agmrancid anlogin arancid arrancid avologin \
 	avorancid blogin brancid cat5rancid clogin complogin \
 	control_rancid cssrancid dllogin elogin erancid f5rancid \
 	f10rancid flogin fnlogin fnrancid hlogin hrancid htlogin \
@@ -435,7 +437,11 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
+login_top: $(top_builddir)/config.status $(srcdir)/login_top.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 control_rancid: $(top_builddir)/config.status $(srcdir)/control_rancid.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+a10login: $(top_builddir)/config.status $(srcdir)/a10login.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 agmrancid: $(top_builddir)/config.status $(srcdir)/agmrancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
@@ -898,7 +904,7 @@ rancid-run: Makefile $(srcdir)/rancid-run.in
 	mv rancid-run.tmp rancid-run
 
 $(bin_PROGRAMS) $(bin_SCRIPTS): ../include/version.h
-$(bin_SCRIPTS): ../COPYING login_top.in
+$(bin_SCRIPTS): ../COPYING login_top
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
