Start brocade support from brocade scripts provided by folks on the ML.

--- a/configure.ac
+++ b/configure.ac
@@ -483,6 +483,7 @@ AC_CONFIG_FILES(bin/arrancid, [chmod a+x $ac_file])
 dnl AC_CONFIG_FILES(bin/atrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/avologin bin/avorancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/blogin bin/brancid, [chmod a+x $ac_file])
+AC_CONFIG_FILES(bin/brlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/cat5rancid bin/clogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/complogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/cssrancid, [chmod a+x $ac_file])
