foundry.pm: add 'show media' and 'show media validation', tested on Brocade ICX 6650 and Brocade CER 2024, but not available on pre-8 firmware - Chris Wopat http://www.brocade.com/downloads/documents/html_product_manuals/FI_08010_ADMIN/GUID-DB102C16-80A4-4AAC-B400-DB564D79DACD.html
eg:
#show media validation
Port       Supported Vendor               Type 
----------------------------------------------------------------------
1/1/2      Yes       CISCO-MODULETEK      1G M-LX(SFP)
1/1/4      Yes       MODULETEK            10GE LR 10km (SFP +)
1/1/31     Yes       MODULETEK            10GE ER 40km (SFP+)
1/1/32     Yes       Brocade              10GE ER 40km (SFP+)


#show media | exclude EMPTY
Port 1/1/1:  Type : 1G M-TX(SFP)
Port 1/1/2:  Type : 1G M-LX(SFP)
Port 1/1/4:  Type : 10GE LR 10km (SFP +)
Port 1/1/31:  Type : 10GE ER 40km (SFP +)
Port 1/1/32:  Type : 10GE ER 40km (SFP +)

--- a/lib/foundry.pm.in
+++ b/lib/foundry.pm.in
@@ -65,7 +65,7 @@ TOP: while(<$INPUT>) {
 		last TOP;
 	    }
 	    if (! defined(&{$commands{$cmd}})) {
-		printf(STDERR "$host: undefined function - \"%s\"\n",  
+		printf(STDERR "$host: undefined function - \"%s\"\n",
 		       $commands{$cmd});
 		$clean_run = 0;
 		last TOP;
@@ -175,6 +175,25 @@ sub ShowFlash {
     }
     ProcessHistory("","","","!\n");
     return;
+}
+
+# This routine parses "show media *"
+sub ShowMedia {
+    my($INPUT, $OUTPUT) = @_;
+    print STDERR "    In ShowMedia: $_" if ($debug);
+
+    while (<$INPUT>) {
+	tr/\015//d;
+	last if (/^$prompt/);
+	return(1) if (/Invalid input (->|detected)/);
+	return(1) if (/^\s+\^$/);		# edgeiron invalid command
+	next if (/^\s*$/);
+	next if (/:\s*$/);
+
+	ProcessHistory("MEDIA","","","!Media: $_");
+    }
+    ProcessHistory("","","","!\n");
+    return(0);
 }
 
 # This routine parses "show module"
