--- a/bin/clogin.in
+++ b/bin/clogin.in
@@ -361,7 +361,7 @@ proc run_commands { prompt command } {
     regsub -all {([^\\]);;} $command "\\1;\u002;" esccommand
     regsub {^;} $esccommand "\u002;" command
     set sep "\\1\u001"
-    regsub -all {([^\\]);} $command "$sep" esccommand
+    regsub -all {([^\\])\;} $command "$sep" esccommand
     set sep "\u001"
     set commands [split $esccommand $sep]
     set num_commands [llength $commands]
