--- a/bin/brlogin.in
+++ b/bin/brlogin.in
@@ -8,8 +8,8 @@
 
 # Sometimes routers take awhile to answer (the default is 10 sec)
 set timeoutdflt 45
-#
-set send_human {.4 .4 .7 .3 5}
+# Some CLIs having problems if we write too fast (Extreme, PIX, Cat)
+set send_human {.2 .1 .4 .2 1}
 
 @login_top@
 
@@ -28,23 +28,24 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype } {
 	if [string match "telnet*" $prog] {
 	    regexp {telnet(:([^[:space:]]+))*} $prog methcmd suffix port
 	    if {"$port" == ""} {
-		set retval [ catch {spawn telnet $router} reason ]
+		set retval [catch {spawn telnet $router} reason]
 	    } else {
-		set retval [ catch {spawn telnet $router $port} reason ]
+		set retval [catch {spawn telnet $router $port} reason]
 	    }
 	    if { $retval } {
 		send_user "\nError: telnet failed: $reason\n"
 		return 1
 	    }
 	} elseif [string match "ssh*" $prog] {
+	    # ssh to the router & try to login
 	    regexp {ssh(:([^[:space:]]+))*} $prog methcmd suffix port
-	    set cmd [join [lindex $sshcmd 0] " "]
+	    set cmd $sshcmd
 	    if {"$port" != ""} {
 		set cmd "$cmd -p $port"
 	    }
-	    set retval [ catch {eval spawn [split "$cmd -c $cyphertype -x -l $user $router" { }]} reason ]
+	    set retval [catch {eval spawn [split "$cmd -c $cyphertype -x -l $user $router" { }]} reason]
 	    if { $retval } {
-		send_user "\nError: $sshcmd failed: $reason\n"
+		send_user "\nError: $cmd failed: $reason\n"
 		return 1
 	    }
 	} elseif ![string compare $prog "rsh"] {
@@ -59,12 +60,18 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype } {
 		continue;
 	    }
 
-	    set commands [split $command \;]
+	    # handle escaped ;s in commands, and ;; and ^;
+	    regsub -all {([^\\]);;} $command "\\1;\u002;" esccommand
+	    regsub {^;} $esccommand "\u002;" command
+	    set sep "\\1\u001"
+	    regsub -all {([^\\])\;} $command "$sep" esccommand
+	    set sep "\u001"
+	    set commands [split $esccommand $sep]
 	    set num_commands [llength $commands]
 	    set rshfail 0
 	    for {set i 0} {$i < $num_commands && !$rshfail} { incr i} {
 		log_user 0
-		set retval [ catch {spawn rsh $user@$router [lindex $commands $i] } reason ]
+		set retval [catch {spawn rsh $user@$router [lindex $commands $i] } reason]
 		if { $retval } {
 		    send_user "\nError: rsh failed: $reason\n"
 		    log_user 1; return 1
@@ -184,18 +191,18 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype } {
 	    catch {close}; catch {wait};
 	    return 1
 	}
-	-re "(Host key not found |The authenticity of host .* be established).*\(yes\/no\)\?" {
+	-re "(Host key not found |The authenticity of host .* be established).*\\(yes\/no\\)\\?" {
 	    send "yes\r"
 	    send_user "\nHost $router added to the list of known hosts.\n"
 	    exp_continue
 	}
-	-re "HOST IDENTIFICATION HAS CHANGED.* \(yes\/no\)\?" {
+	-re "HOST IDENTIFICATION HAS CHANGED.* \\(yes\/no\\)\\?" {
 	    send "no\r"
 	    send_user "\nError: The host key for $router has changed.  Update the SSH known_hosts file accordingly.\n"
 	    catch {close}; catch {wait};
 	    return 1
 	}
-	-re "Offending key for .* \(yes\/no\)\?" {
+	-re "Offending key for .* \\(yes\/no\\)\\?" {
 	    send "no\r"
 	    send_user "\nError: host key mismatch for $router.  Update the SSH known_hosts file accordingly.\n"
 	    catch {close}; catch {wait};
@@ -262,10 +269,10 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype } {
 # Enable
 proc do_enable { enauser enapasswd } {
     global do_saveconfig in_proc
-    global prompt u_prompt e_prompt
+    global prompt u_prompt e_prompt enacmd
     set in_proc 1
 
-    send "enable\r"
+    send "$enacmd\r"
     expect {
 	-re "$u_prompt"	{ send -- "$enauser\r"; exp_continue}
 	-re "$e_prompt"	{ send -- "$enapasswd\r"; exp_continue}
@@ -335,7 +342,7 @@ proc run_commands { prompt command } {
     # for the "More" prompt.  the extreme is equally obnoxious, with a
     # global switch in the config.
     for {set i 0} {$i < $num_commands} { incr i} {
-	send -- "[subst -nocommands [lindex $commands $i]]\r"
+	send -h -- "[subst -nocommands [lindex $commands $i]]\r"
 	expect {
 	    -re "\b+"				{ exp_continue }
 	    -re "^\[^\n\r *]*$reprompt"		{ send_user -- "$expect_out(buffer)"
@@ -417,7 +424,7 @@ proc run_commands { prompt command } {
 						}
 	-re "\[\n\r]+"				{ exp_continue }
 	timeout					{ catch {close}; catch {wait};
-						  return 0
+						  return 1
 						}
 	eof					{ return 0 }
     }
@@ -513,6 +520,10 @@ foreach router [lrange $argv $i end] {
       if { "$enauser" == "" } { set enauser $ruser }
     }
 
+    # Figure out enable command
+    set enacmd [join [find enablecmd $router] ""]
+    if { "$enacmd" == "" } { set enacmd "enable" }
+
     # Figure out prompts
     set u_prompt [find userprompt $router]
     if { "$u_prompt" == "" } {
@@ -547,8 +558,11 @@ foreach router [lrange $argv $i end] {
     if { "$cmethod" == "" } { set cmethod {{telnet} {ssh}} }
 
     # Figure out the SSH executable name
-    set sshcmd [find sshcmd $router]
+    set sshcmd [join [lindex [find sshcmd $router] 0] ""]
     if { "$sshcmd" == "" } { set sshcmd {ssh} }
+
+    # if [-mM], skip do not login
+    if { $do_cloginrcdbg > 0 } { continue; }
 
     # Login to the router
     if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype]} {
@@ -582,7 +596,6 @@ foreach router [lrange $argv $i end] {
 				  regsub -all "\[\]\[\(\)]" $junk {\\&} prompt;
 				}
     }
-
     if { $do_command } {
 	if {[run_commands $prompt $command]} {
 	    incr exitval
@@ -592,13 +605,13 @@ foreach router [lrange $argv $i end] {
 	# If the prompt is (enable), then we are on a switch and the
 	# command is "set length 0"; otherwise its "terminal length 0".
 	if [ regexp -- ".*> .*enable" "$prompt" ] {
-	    send "set length 0\r"
+	    send -h "set length 0\r"
 	    expect -re $prompt	{}
-	    send "set logging session disable\r"
+	    send -h "set logging session disable\r"
 	} else {
-	    send "terminal length 0\r"
+	    send -h "terminal length 0\r"
 	    expect -re $prompt  {}
-	    send "set width 80\r"
+	    send -h "set width 80\r"
 	}
 	expect -re $prompt	{}
 	source $sfile
