--- a/rancid/bin/rancid-cvs.in
+++ b/rancid/bin/rancid-cvs.in
@@ -171,9 +171,9 @@ do
 	git )
 	    git init --bare $CVSROOT/$GROUP
 	    git clone $CVSROOT/$GROUP .
-	    git config --global user.name RANCiD
-	    git config --global user.email $USER$MAILDOMAIN
-	    git config --global push.default current
+	    git config user.name RANCiD
+	    git config user.email $USER$MAILDOMAIN
+	    git config push.default current
 	    ;;
 	esac
     fi
