iosxr.pm: fail on temp error in admin show install eg: - ! The inventory summary cannot be output when the profiles are different. The profiles may be different if querying over the start or end of an install operat ion. - ! Suggested steps: - !  - re-run the query. + ! Default Profile: + !   SDRs: 	...

--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -731,6 +731,7 @@ sub ShowInstallSummary {
 	return(1) if (/Ambiguous command/i);
 	return(1) if (/(Open device \S+ failed|Error opening \S+:)/);
 	return(-1) if (/command authorization failed/i);
+	return(-1) if (/inventory summary cannot be output/i);	# temp error
 
 	# skip blank lines
 	next if (/^\s*$/);
