Fix handling of srancid in the previous makefile commit; the rule from autoconf was conflicting with our sed script.

--- a/configure.ac
+++ b/configure.ac
@@ -506,7 +506,7 @@ AC_CONFIG_FILES(bin/rblogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/rivlogin bin/rivrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/rrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/rtftpcopy, [chmod a+x $ac_file])
-AC_CONFIG_FILES(bin/srancid, [chmod a+x $ac_file])
+dnl AC_CONFIG_FILES(bin/srancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/tlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/trancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/xilogin bin/xirancid, [chmod a+x $ac_file])
