iosxr.pm: ShowInstallSummary() return error if active install operation

--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -732,6 +732,7 @@ sub ShowInstallSummary {
 	return(1) if (/(Open device \S+ failed|Error opening \S+:)/);
 	return(-1) if (/command authorization failed/i);
 	return(-1) if (/inventory summary cannot be output/i);	# temp error
+	return(-1) if (/currently affected by install operation/i);# temp error
 
 	# skip blank lines
 	next if (/^\s*$/);
